--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "4               0  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,10 +272,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.779</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.774</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   144.9</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sat, 20 Oct 2018</td> <th>  Prob (F-statistic):</th> <td>5.15e-153</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>20:56:52</td>     <th>  Log-Likelihood:    </th> <td> -1458.2</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   506</td>      <th>  AIC:               </th> <td>   2942.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   493</td>      <th>  BIC:               </th> <td>   2997.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>    12</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "         <td></td>           <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>          <td>    4.4397</td> <td>    1.785</td> <td>    2.487</td> <td> 0.013</td> <td>    0.933</td> <td>    7.947</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CRIM</th>           <td>   -1.9000</td> <td>    2.091</td> <td>   -0.909</td> <td> 0.364</td> <td>   -6.009</td> <td>    2.209</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>INDUS</th>          <td>   -0.8069</td> <td>    0.362</td> <td>   -2.228</td> <td> 0.026</td> <td>   -1.518</td> <td>   -0.095</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CHAS</th>           <td>    2.5968</td> <td>    0.796</td> <td>    3.262</td> <td> 0.001</td> <td>    1.033</td> <td>    4.161</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>RM</th>             <td>    2.6445</td> <td>    0.408</td> <td>    6.480</td> <td> 0.000</td> <td>    1.843</td> <td>    3.446</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>AGE</th>            <td>    0.0787</td> <td>    0.352</td> <td>    0.224</td> <td> 0.823</td> <td>   -0.612</td> <td>    0.770</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>DIS</th>            <td>  -10.0839</td> <td>    1.855</td> <td>   -5.437</td> <td> 0.000</td> <td>  -13.728</td> <td>   -6.440</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>PTRATIO</th>        <td>   -1.4864</td> <td>    0.241</td> <td>   -6.159</td> <td> 0.000</td> <td>   -1.961</td> <td>   -1.012</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>B</th>              <td>    3.8623</td> <td>    0.981</td> <td>    3.935</td> <td> 0.000</td> <td>    1.934</td> <td>    5.791</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>LSTAT</th>          <td>   -5.6315</td> <td>    0.354</td> <td>  -15.929</td> <td> 0.000</td> <td>   -6.326</td> <td>   -4.937</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>RAD_(0, 6]</th>     <td>    1.5563</td> <td>    0.821</td> <td>    1.896</td> <td> 0.059</td> <td>   -0.056</td> <td>    3.169</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>RAD_(6, 24]</th>    <td>    2.8834</td> <td>    1.069</td> <td>    2.697</td> <td> 0.007</td> <td>    0.783</td> <td>    4.984</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>TAX_(0, 270]</th>   <td>    2.6166</td> <td>    0.715</td> <td>    3.661</td> <td> 0.000</td> <td>    1.212</td> <td>    4.021</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>TAX_(270, 360]</th> <td>    1.3553</td> <td>    0.702</td> <td>    1.930</td> <td> 0.054</td> <td>   -0.025</td> <td>    2.735</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>TAX_(360, 712]</th> <td>    0.4679</td> <td>    0.683</td> <td>    0.685</td> <td> 0.493</td> <td>   -0.873</td> <td>    1.809</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>106.736</td> <th>  Durbin-Watson:     </th> <td>   1.093</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td> 431.931</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.891</td>  <th>  Prob(JB):          </th> <td>1.61e-94</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 7.161</td>  <th>  Cond. No.          </th> <td>9.42e+16</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 2.46e-30. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.779\n",
+       "Model:                            OLS   Adj. R-squared:                  0.774\n",
+       "Method:                 Least Squares   F-statistic:                     144.9\n",
+       "Date:                Sat, 20 Oct 2018   Prob (F-statistic):          5.15e-153\n",
+       "Time:                        20:56:52   Log-Likelihood:                -1458.2\n",
+       "No. Observations:                 506   AIC:                             2942.\n",
+       "Df Residuals:                     493   BIC:                             2997.\n",
+       "Df Model:                          12                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==================================================================================\n",
+       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------\n",
+       "const              4.4397      1.785      2.487      0.013       0.933       7.947\n",
+       "CRIM              -1.9000      2.091     -0.909      0.364      -6.009       2.209\n",
+       "INDUS             -0.8069      0.362     -2.228      0.026      -1.518      -0.095\n",
+       "CHAS               2.5968      0.796      3.262      0.001       1.033       4.161\n",
+       "RM                 2.6445      0.408      6.480      0.000       1.843       3.446\n",
+       "AGE                0.0787      0.352      0.224      0.823      -0.612       0.770\n",
+       "DIS              -10.0839      1.855     -5.437      0.000     -13.728      -6.440\n",
+       "PTRATIO           -1.4864      0.241     -6.159      0.000      -1.961      -1.012\n",
+       "B                  3.8623      0.981      3.935      0.000       1.934       5.791\n",
+       "LSTAT             -5.6315      0.354    -15.929      0.000      -6.326      -4.937\n",
+       "RAD_(0, 6]         1.5563      0.821      1.896      0.059      -0.056       3.169\n",
+       "RAD_(6, 24]        2.8834      1.069      2.697      0.007       0.783       4.984\n",
+       "TAX_(0, 270]       2.6166      0.715      3.661      0.000       1.212       4.021\n",
+       "TAX_(270, 360]     1.3553      0.702      1.930      0.054      -0.025       2.735\n",
+       "TAX_(360, 712]     0.4679      0.683      0.685      0.493      -0.873       1.809\n",
+       "==============================================================================\n",
+       "Omnibus:                      106.736   Durbin-Watson:                   1.093\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              431.931\n",
+       "Skew:                           0.891   Prob(JB):                     1.61e-94\n",
+       "Kurtosis:                       7.161   Cond. No.                     9.42e+16\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The smallest eigenvalue is 2.46e-30. This might indicate that there are\n",
+       "strong multicollinearity problems or that the design matrix is singular.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "import statsmodels.api as sm\n",
+    "predictors_int = sm.add_constant(boston_features)\n",
+    "model = sm.OLS(boston.target,predictors_int).fit()\n",
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,10 +442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -1.89995316  -0.80688617   2.59684028   2.64453176   0.0786663\n",
+      " -10.0839112   -1.48638161   3.86233002  -5.63145746  -0.66357383\n",
+      "   0.66357383   1.13664819  -0.12462051  -1.01202768]\n",
+      "8.139523707662837\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "y = boston.target\n",
+    "linreg = LinearRegression()\n",
+    "linreg.fit(boston_features, y)\n",
+    "print(linreg.coef_)\n",
+    "print(linreg.intercept_)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -300,10 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boston_features = boston_features.iloc[:,:9]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,10 +490,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const      5.378755\n",
+       "CRIM      -0.568816\n",
+       "INDUS     -1.172371\n",
+       "CHAS       2.795042\n",
+       "RM         2.882500\n",
+       "AGE        0.010664\n",
+       "DIS       -9.912829\n",
+       "PTRATIO   -1.344748\n",
+       "B          3.953811\n",
+       "LSTAT     -5.629025\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictors_int = sm.add_constant(boston_features)\n",
+    "model2 = sm.OLS(boston.target,predictors_int).fit()\n",
+    "model2.summary()\n",
+    "model2.params"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,16 +530,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.56881564 -1.17237121  2.7950424   2.88249973  0.01066422 -9.91282921\n",
+      " -1.34474808  3.95381068 -5.62902505]\n",
+      "5.378755344572276\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = boston.target\n",
+    "linreg2 = LinearRegression()\n",
+    "linreg2.fit(boston_features, y)\n",
+    "print(linreg2.coef_)\n",
+    "print(linreg2.intercept_)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Interpret the coefficients for PTRATIO, PTRATIO, LSTAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the mean change in the target value for a unit change in PTRATIO and LSTAT is -1.344748 and -5.629025\n",
+    "# as the pupil to teacher ratio increases, MEDV decreases, and it decreases way more for a drop in % lower status\n",
+    "# of the population"
    ]
   },
   {
@@ -379,6 +608,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston_features[\"B\"] = (b-min(b))/(max(b)-min(b))\n",
+    "boston_features[\"CRIM\"] = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "boston_features[\"DIS\"] = (logdis-min(logdis))/(max(logdis)-min(logdis))\n",
+    "\n",
+    "#standardization\n",
+    "boston_features[\"AGE\"] = (age-np.mean(age))/np.sqrt(np.var(age))\n",
+    "boston_features[\"INDUS\"] = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "boston_features[\"LSTAT\"] = (loglstat-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
+    "boston_features[\"PTRATIO\"] = (logptratio-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = 5.378755\n",
+    "\n",
+    "crim1 = (np.log(0.15)-min(logcrim))/(max(logcrim)-min(logcrim))\n",
+    "b1 = (383-min(b))/(max(b)-min(b))\n",
+    "dis1 = (np.log(7.6)-min(logdis))/(max(logdis)-min(logdis))\n",
+    "indus1 = (np.log(6.07)-np.mean(logindus))/np.sqrt(np.var(logindus))\n",
+    "lstat1 = (np.log(10.87)-np.mean(loglstat))/np.sqrt(np.var(loglstat))\n",
+    "age1 = (33.2-np.mean(age))/np.sqrt(np.var(age))\n",
+    "ptratio1 = (np.log(17)-np.mean(logptratio))/(np.sqrt(np.var(logptratio)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1533.4741744817666\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction += (-0.568816*crim1) + (-1.172371*indus1) + (2.795042*1) + (2.882500*6.1) + (0.010664*age1) + (-9.912829*dis1) + (-1.344748*ptratio1) + (3.953811*b1) + (-5.629025*lstat1)\n",
+    "print(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const      5.378755\n",
+       "CRIM      -0.568816\n",
+       "INDUS     -1.172371\n",
+       "CHAS       2.795042\n",
+       "RM         2.882500\n",
+       "AGE        0.010664\n",
+       "DIS       -9.912829\n",
+       "PTRATIO   -1.344748\n",
+       "B          3.953811\n",
+       "LSTAT     -5.629025\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.params"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -403,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
